--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <form class="containterLeft__entryForm" id="entryForm" action="">
                     <fieldset>
                         <label for="journalDate">Date of Entry</label>
-                        <input type="date" name="journalDate" id="journalDate">
+                        <input type="date" name="journalDate" id="journalDate" class="input-left">
                         <label for="mood">Mood</label>
-                        <select name="mood" id="mood" form="entryForm">
+                        <select name="mood" id="mood" form="entryForm" class="input-left">
                             <option value="mind-blown">🤯 Mind Blown</option>
                             <option value="excited">😃 Excited</option>
                             <option value="happy">🙂 Happy as a clam</option>
@@ -33,10 +33,10 @@
                             <option value="nervous">😬 Nervous...</option>
                         </select>
                         <label for="concepts">Concepts Covered</label>
-                        <input type="text" name="concepts" id="concepts">
-                        <label for="entryContent">Concepts Covered</label>
+                        <input type="text" name="concepts" id="concepts" class="input-left" size="50">
+                        <label for="entryContent">Journal Entry</label>
                         <textarea name="entryContent" id="entryContent" cols="30" rows="10"></textarea>
-                        <input type="submit" value="Record Jounral Entry">
+                        <input id="entryForm__submit" type="submit" value="Record Jounral Entry" class="button">
                     </fieldset>
                 </form>
 
@@ -52,8 +52,8 @@
                         </div> <!-- entry__header -->
                         <p class="entry__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent blandit consequat justo non volutpat. Duis maximus mi posuere felis aliquet, id aliquam libero suscipit. Mauris sed facilisis sapien. Vestibulum molestie odio quis tortor congue vehicula. Sed fermentum lorem et augue aliquet, vel sagittis sem consequat. Nam gravida et dui ut tempor. Donec varius nisl eget malesuada facilisis.</p>
                         <div class="entry__buttons">
-                            <button class="entry__edit button-normal">Edit</button>
-                            <button class="entry__delete button-warn">Delete</button>
+                            <button class="button button-normal">Edit</button>
+                            <button class="button button-warn">Delete</button>
                         </div> <!-- entry__buttons -->
                     </article> <!-- entry -->
 
@@ -67,8 +67,8 @@
                         </div> <!-- entry__header -->
                         <p class="entry__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent blandit consequat justo non volutpat. Duis maximus mi posuere felis aliquet, id aliquam libero suscipit. Mauris sed facilisis sapien. Vestibulum molestie odio quis tortor congue vehicula. Sed fermentum lorem et augue aliquet, vel sagittis sem consequat. Nam gravida et dui ut tempor. Donec varius nisl eget malesuada facilisis.</p>
                         <div class="entry__buttons">
-                            <button class="entry__edit button-normal">Edit</button>
-                            <button class="entry__delete button-warn">Delete</button>
+                            <button class="entry__edit button button-normal">Edit</button>
+                            <button class="entry__delete button button-warn">Delete</button>
                         </div> <!-- entry__buttons -->
                     </article> <!-- entry -->
 
@@ -82,17 +82,20 @@
                         </div> <!-- entry__header -->
                         <p class="entry__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent blandit consequat justo non volutpat. Duis maximus mi posuere felis aliquet, id aliquam libero suscipit. Mauris sed facilisis sapien. Vestibulum molestie odio quis tortor congue vehicula. Sed fermentum lorem et augue aliquet, vel sagittis sem consequat. Nam gravida et dui ut tempor. Donec varius nisl eget malesuada facilisis.</p>
                         <div class="entry__buttons">
-                            <button class="entry__edit button-normal">Edit</button>
-                            <button class="entry__delete button-warn">Delete</button>
+                            <button class="entry__edit button button-normal">Edit</button>
+                            <button class="entry__delete button button-warn">Delete</button>
                         </div> <!-- entry__buttons -->
                     </article> <!-- entry -->
+
+
 
                 </section>  <!-- entries -->
 
             </section>
 
             <aside class="containerRight">
-                <ul class="containterRight__entryList">
+                <h3>Previous Entries</h3>
+                <ul class="containerRight__entryList">
                     <li class="entryList__item">Most Recent Entry</li>
                     <li class="entryList__item">Previous Entry</li>
                     <li class="entryList__item">Previous Entry</li>
