Added mood filter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <section class="containerLeft">
                 <h2>Daily Journal</h2>
                 <section class="containerLeft__entryForm"></section>
+                <secton class="moodFilter"></secton>
                 <section class="containerLeft__entries"></section>
 
             </section>
@@ -44,3 +45,4 @@
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
+
